[gd_scene load_steps=10 format=3 uid="uid://bq8u4j6ttthae"]

[ext_resource type="Script" uid="uid://cq871h2jgfly7" path="res://Scripts/MainMenu/main.gd" id="1_cm0pq"]
[ext_resource type="AudioStream" uid="uid://udy4xdm8ruxn" path="res://Sounds/Music/Songs/punchout_wii_theme.ogg" id="2_fos0i"]
[ext_resource type="Script" uid="uid://jd62yhn2aogi" path="res://Scripts/RoboxerController.gd" id="3_cm0pq"]
[ext_resource type="Script" uid="uid://bgwbmx13doji2" path="res://Scripts/CreatorUI.gd" id="3_k1ist"]
[ext_resource type="PackedScene" uid="uid://l8v224bpgm7x" path="res://Scenes/ro_boxer.tscn" id="3_r0du0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_glv2v"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_uu6xs"]
sky_material = SubResource("ProceduralSkyMaterial_glv2v")

[sub_resource type="Environment" id="Environment_r0du0"]
background_mode = 2
sky = SubResource("Sky_uu6xs")
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_uu6xs"]
size = Vector2(20, 20)

[node name="CharacterEditor" type="Node3D" node_paths=PackedStringArray("SpringArm", "ReturnToMenuButton")]
script = ExtResource("1_cm0pq")
SpringArm = NodePath("SpringArm3D")
ReturnToMenuButton = NodePath("UI/BackButton")
Song = ExtResource("2_fos0i")
metadata/_edit_vertical_guides_ = [32.0]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_k1ist")

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 80.0
text = "<-"

[node name="AddImageButtom" type="Button" parent="UI"]
layout_mode = 0
offset_left = 32.0
offset_top = 88.0
offset_right = 256.0
offset_bottom = 160.0
text = "Adicionar imagem"

[node name="NameTextArea" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 32.0
offset_top = 168.0
offset_right = 256.0
offset_bottom = 199.0
placeholder_text = "Nome do personagem"

[node name="CreateButtom" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -88.0
offset_right = 192.0
offset_bottom = -33.0
grow_vertical = 0
text = "Criar"

[node name="Enviroment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Enviroment"]
environment = SubResource("Environment_r0du0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Enviroment"]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="Enviroment"]
mesh = SubResource("PlaneMesh_uu6xs")
skeleton = NodePath("../..")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
spring_length = 2.5

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0, -2)

[node name="RoboxerController" type="Node3D" parent="."]
script = ExtResource("3_cm0pq")

[node name="RoBoxer" parent="RoboxerController" instance=ExtResource("3_r0du0")]

[connection signal="pressed" from="UI/BackButton" to="UI" method="_on_back_button_pressed"]
[connection signal="button_up" from="UI/AddImageButtom" to="UI/AddImageButtom" method="_on_button_up"]
[connection signal="pressed" from="UI/AddImageButtom" to="UI" method="_on_add_image_buttom_pressed"]
[connection signal="text_changed" from="UI/NameTextArea" to="UI" method="_on_name_text_area_text_changed"]
[connection signal="pressed" from="UI/CreateButtom" to="UI" method="_on_create_buttom_pressed"]
